<resources>
    <string name="app_name">AppHandmade</string>
    <string name="xem_danh_s_ch_ng_i_mua">Xem danh sách người mua</string>
    <string name="login2">Đăng Nhập</string>
    <string name="login3">Đăng Ký</string>
    <string name="nguoidung">Tên người dùng</string>
    <string name="username">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="rememberpass">Nhớ mật khẩu ?</string>
    <string name="pass">Xác nhận mật khẩu</string>
    <string name="not_yet_registered_sign_up_now">Chưa có tài khoản?</string>
    <string name="login4">Đăng Ký !</string>
    <string name="facebook">Sign in Facebook</string>
    <string name="google">Sign in Google</string>
    <string name="todo">TODO</string>
    <string name="cart">Giỏ Hàng</string>
    <string name="t_n_m_n_h_ng">Tên món hàng</string>
    <string name="t_n_ng_i_mua">Tên người mua</string>
    <string name="avatar_c_a_ng_i_mua">Avatar của người mua</string>
    <string name="li_n_h">Liên hệ</string>
    <string name="t_i_kho_n">Tài Khoản</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="m_t_s_n_ph_m">Mô tả sản phẩm</string>
    <string name="gi_500_000_vnd">Giá: 500,000 VND</string>
    <string name="tr_ng_th_i_c_n_h_ng">Trạng thái: Còn hàng</string>
    <string name="h_nh_nh_s_n_ph_m">Hình ảnh sản phẩm</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_username">Tên đăng nhập</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_confirm_password">Nhập lại mật khẩu</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_all_fields_are_required">All fields are required</string>
    <string name="text_passwords_do_not_match">Passwords do not match</string>
    <string name="text_registration_successful">Registration successful</string>
    <string name="text_registration_failed">Registration failed</string>
    <string name="text_title_app">Tiệm Nhà Cam</string>
    <string name="text_add_to_card">Them vao gio hang</string>
    <string name="text_add_to_whislist">Them vao ds yeu thich</string>
</resources>