<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutOn1"
        tools:ignore="MissingConstraints">
        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/imageforhomeheader"
            android:contentDescription="TODO"
            tools:ignore="HardcodedText">

            <ImageButton
                android:id="@+id/igmbuttonMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:importantForAccessibility="no"
                android:padding="5dp"
                android:src="@drawable/out"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"></ImageButton>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="95dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:padding="15dp"
                android:text="Giỏ Hàng"
                android:textColor="@color/black"
                android:background="@drawable/border_tieude"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" ></TextView>
        </Toolbar>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/layoutOn1"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:translationZ="7dp"

        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints">




        <!-- Total Price and Checkout Button -->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutOn1"
            tools:layout_editor_absoluteX="0dp">

            <!-- Product Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Product Image -->
                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/h_nh_nh_s_n_ph_m"
                    android:src="@drawable/camera" />

                <!-- Product Details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_n_s_n_ph_m"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m_t_s_n_ph_m"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gi_500_000_vnd"
                        android:textColor="@color/nau"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/product_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tr_ng_th_i_c_n_h_ng"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Product Select RadioButton -->
                <RadioButton
                    android:id="@+id/radio_select_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:buttonTint="@drawable/radiobutton" />

            </LinearLayout>

            <!-- Quantity and Remove Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- Quantity Controls -->
                <Button
                    android:id="@+id/button_decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/darker_gray"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/darker_gray"
                    android:text="+"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <!-- Remove Item Button -->
                <Button
                    android:id="@+id/button_remove_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F04444"
                    android:layout_marginHorizontal="10dp"
                    android:text="Xóa"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/total_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/radio_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@drawable/radiobutton"
            android:text=" Chọn tất cả"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="14dp"
            tools:layout_editor_absoluteY="390dp" />

        <TextView
            android:id="@+id/text_total"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/support"
            android:text="Chỉnh sửa"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/nut_hong"
            android:text="Mua Ngay"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
