<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:id="@+id/main"
    tools:context=".layout_login"
    >
    <LinearLayout
        android:layout_width="418dp"
        android:layout_height="411dp"
        android:orientation="vertical"
        android:padding="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/ng_nh_p"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="true"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbackgrounf"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="Tên đăng nhập"
                android:padding="12dp"
                android:textColorHint="#121212"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbackgrounf"
                android:drawableStart="@drawable/secured"
                android:drawablePadding="10dp"
                android:hint="Mật khẩu"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#000000"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/textpass"
            android:paddingVertical="12dp"
            android:text="@string/ng_nh_p"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:text="Chưa có tài khoản? "
            android:textColor="#F6F5F4"
            android:textSize="16sp"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/signupText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-23dp"
            android:layout_marginEnd="-3dp"
            android:text="Đăng ký! "
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googleButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/textpass"
                android:textColor="@color/white"
                android:drawablePadding="1dp"
                android:text="@string/google"
                android:textSize="11sp"
                >

            </androidx.appcompat.widget.AppCompatButton>

            <Button
                android:id="@+id/facebookButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/textpass"
                android:drawablePadding="2dp"
                android:text="@string/facebook"
                android:textColor="#FFFEFE"
                android:textSize="10sp"
                tools:ignore="SmallSp,TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
